--- a/nginx/conf.d/25-health.conf
+++ b/nginx/conf.d/25-health.conf
@@ -62,6 +62,11 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header X-Forwarded-Email $auth_email;
+
+        # Longer timeout for admin operations (container restart can take time)
+        proxy_read_timeout 120s;
+        proxy_connect_timeout 10s;
+        proxy_send_timeout 120s;
     }
 
     # ---- PUBLIC ENDPOINTS (API key auth handled by service) ----
